Actualización del sitio

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(to right, #283e51, #485563);
+    background: linear-gradient(to right, #fab259, #959595);
     color: #f1f1f1;
     margin: 0;
     padding: 0;
